test/parse/expr/bad-br-no-depth.txt
;;; ERROR: 1
(module
  (func
    block
      br
    end))
(;; STDERR ;;;
out/test/parse/expr/bad-br-no-depth.txt:6:5: error: syntax error, unexpected END, expecting NAT or VAR
    end))
    ^^^
;;; STDERR ;;)
